feat(users): created users page feature - Added an option for creating new user [Finish #171179716]

--- a/UI/css/styles.css
+++ b/UI/css/styles.css
@@ -195,6 +195,10 @@ header ul li span.user-name {
     grid-template-columns: auto auto;
 }
 
+.pull-right {
+    float: right;
+}
+
 /* individual account Number */
 .account {
     display: grid;
