chor(little style): changed some few arrangements - changed some styles [Finish #171208434]

--- a/UI/css/styles.css
+++ b/UI/css/styles.css
@@ -265,7 +265,7 @@ header ul li span.user-name {
 /* create account div */
 .create-account {
     margin: 30px auto;
-    padding: 10px 400px;
+    width: 47%;
 }
 
 .footer {
