--- a/UI/css/styles.css
+++ b/UI/css/styles.css
@@ -11,8 +11,8 @@ body {
     height: 100%;
     margin: 0px;
     padding: 0px;
-    /* background: #f6f6f6; */
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Open Sans', sans-serif;
+    font-family: 'Lato', sans-serif;
 }
 
 header {
@@ -138,14 +138,13 @@ header ul li span.user-name {
 
 .home-img {
     background-image: url("../images/Video-Chat-Help-To-Improve-Digital-Banking-System.png");
-    /* Set a specific height */
-    min-height: 800px;
-
-    /* Create the parallax scrolling effect */
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    position: absolute;
+    height: 100%;
+    width: 100%;
 }
 
 /* home title */
@@ -579,10 +578,43 @@ tr:nth-child(even) {
     width: 18%;
 }
 
+.landing-text {
+    position: absolute;
+    top: 40%;
+    padding: 20px 4% 20px 4%;
+    background-color: #205c73;
+    color: white;
+    margin: auto 15%;
+    font-size: 22px;
+    text-align: center;
+    font-family: monospace;
+    z-index: 11;
+}
+
+.home-button {
+    top: 70%;
+    border: 1px solid #62c8cc;
+    position: absolute;
+    margin: 0 0 0 40%;
+    padding: 12px;
+    width: 326px;
+    text-align: center;
+    text-decoration: none;
+    color: #1c1c1c;
+    background-color: #FFC8A6;
+    box-shadow: 3px 4px 5px black;
+    z-index: 10;
+}
+
 /* Media Querries */
 @media only screen and (max-width: 750px) {
     .home-title {
-        top: 50%;
+        position: absolute;
+        z-index: 10;
+    }
+
+    .home-button {
+        display: none;
     }
 
     header {
